# llama.cpp

./: CMakeLists.txt  Makefile  Package.swift  README.md
common/: CMakeLists.txt
examples/: CMakeLists.txt
examples/audio-lm-python/: CMakeLists.txt  README.md  nexa_audio_cpp.py  nexa_audio_inference.py  omni_audio_cpp.py  qwen2_audio_cpp.py
examples/llama.android/llama/src/main/cpp/: llama-android.cpp
examples/llava/: clip.h  llava-cli.h
examples/nano-omni-audio/: CMakeLists.txt  README.md  omni.cpp
examples/nexa-omni-audio/: .gitignore  CMakeLists.txt  README.md  main-encode.cpp  omni-cli.cpp  omni.cpp  omni.h  whisper.cpp  whisper.h
examples/nexa-omni-audio-v2/: convert-to-gguf-f16.py
examples/nexa-omni-audio/pybind/: omni_audio_cpp.py
examples/nexa-parallel-inference/: CMakeLists.txt  parallel_demo.cc
examples/omni-vlm/: CMakeLists.txt  README.md  omni-vlm-cli.cpp  omni-vlm-wrapper-cli.cpp  omni-vlm-wrapper.cpp  omni-vlm-wrapper.h  omni-vlm.cpp  omni_vlm_demo.py
examples/parallel/: CMakeLists.txt  README.md  parallel-wrapper-cli.cpp  parallel-wrapper.cpp  parallel-wrapper.h
examples/qwen2-audio/: CMakeLists.txt  qwen2.cpp  qwen2.h  whisper.cpp
ggml/src/: ggml-quants.c
ggml/src/ggml-cpu/: ggml-cpu-quants.c
ggml_llama/: CMakeLists.txt
ggml_llama/src/: CMakeLists.txt  ggml-metal.m
spm-headers/: arg.h
spm/common/: arg.h
spm/llava/: clip.h  llava-cli.h  llava.h
src/: llama.cpp
